# SearchSystem

./: .gitattributes  ARCHITECTURE.md  Dockerfile.elasticsearch  README.md  SCORING_AND_SEARCH.md  cli_search.py  docker-compose.yml  manufacturer.txt  offers.json  product-mapping.json  pyproject.toml  queries_example.txt
app/: brands.py  cache.py  config.py  data_files.py  es_client.py  etl_loader.py  importer.py  indexing.py  main.py  models.py  phonetics.py  search.py  search_service.py  utils.py
config/: brand_synonyms.txt
docs/: ALGORITHM_RU.md  SYSTEM_OVERVIEW.md
static/: app.js  index.html
tests/: test_phonetics.py
